fixing overflow (again)

--- a/app/assets/stylesheets/home/shared.css.scss
+++ b/app/assets/stylesheets/home/shared.css.scss
@@ -31,7 +31,7 @@ body {
   height: 721px;
   background: black;
   width: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 
 #background {
